--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 discord.py>=2.3.2
 pandas>=2.2.0
 openpyxl>=3.1.2
+
 python-dotenv>=1.0.1
+
+playwright>=1.45,<2
+httpx>=0.27,<0.28
+beautifulsoup4>=4.12,<5
